v1.9.0/articles/explanation/rhino-yml.md
# Explanation: Configuring Rhino - rhino.yml

## Configure Rhino with `rhino.yml`

Rhino uses its own `rhino.yml` config file where you can set a few
options on how it works in your app. Currently available options are
described below.

### `rhino.yml` options

``` yaml
sass: string               # required | one of: "node", "r", "custom"
legacy_entrypoint: string  # optional | one of: "app_dir", "source", "box_top_level"
```

#### `sass`

This option controls the behavior
[`rhino::build_sass()`](https://appsilon.github.io/rhino/v1.9.0/reference/build_sass.md):

- `node`: Build Sass using the [Node.js
  package](https://www.npmjs.com/package/sass).
- `r`: Build Sass using the [R
  package](https://cran.r-project.org/package=sass).
- `custom`: Do nothing. Useful when [bundling custom Sass with `bslib`
  theme](https://appsilon.github.io/rhino/articles/how-to/use-bslib.html).

Read more in [Explanation: Node.js - JavaScript and Sass
tools](https://appsilon.github.io/rhino/articles/explanation/node-js-javascript-and-sass-tools.html).

#### `legacy_entrypoint`

This setting is useful when migrating an existing Shiny application to
Rhino. For more details see [`rhino::app()` details
section](https://appsilon.github.io/rhino/reference/app.html#details-1).
